--- a/fifteen/index.html
+++ b/fifteen/index.html
@@ -1,12 +1,55 @@
-<html>  
-<head>  
-    <meta charset="UTF-8">  
-    <title>火拼15球白板</title>  
-</head>  
-<body>  
-    <div id="app"></div> 
+<!doctype html>
+<html lang="en">
 
-    <script src="http://192.168.2.2:3000/socket.io/socket.io.js"></script>  
-    <script src="dist/build.js"></script>  
-</body>  
-</html> 
+<head>
+	<title>火拼15球</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
+</head>
+
+<body>
+
+	<div class="container">
+		<h2>Fitteen ball</h2>
+		<hr>
+		<!--<div class="alert alert-warning">
+			<a href="javascript:;" class="close" data-dismiss="alert">&times;</a>
+			<span> btn-primary</span>
+		</div>-->
+		<div class="alert alert-danger hidden" id="msg-warn"></div>
+		<div class="alert alert-success hidden" id="msg-info"></div>
+		<!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
+	</div>
+
+	<div id="app"></div>
+
+	<!--<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<h2>Heading</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+					nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			</div>
+			<div class="col-md-4">
+				<h2>Heading</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+					nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			</div>
+			<div class="col-md-4">
+				<h2>Heading</h2>
+				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod
+					semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			</div>
+		</div>
+	</div>-->
+
+	<script src="http://192.168.2.2:3000/socket.io/socket.io.js"></script>
+	<script src="dist/build.js"></script>
+</body>
+
+</html>
